feat:entitys create

--- a/.env.sample
+++ b/.env.sample
@@ -2,8 +2,8 @@ PORT =
 
 
 # conexion a bd
-DB_USER=
-DB_PASSWORD=
-DB_PORT=
-DB_HOST=
-DB_DATABASE=
+DB_USER=root
+DB_PASSWORD=1234
+DB_PORT=3308
+DB_HOST=localhost
+DB_DATABASE=proyecto_4
