--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "dev": "nodemon ./src/server.ts",
     "run-migrations": " typeorm-ts-node-commonjs migration:run -d ./src/database/db.ts",
     "revert-migrations": "typeorm-ts-node-commonjs migration:revert -d ./src/database/db.ts",
+    "seed-services": "ts-node ./src/database/seeders/serviceSeeder.ts",
+    "seed-roles": "ts-node ./src/database/seeders/roleSeeder.ts",
+    "seed-users": "ts-node ./src/database/seeders/userSeeder.ts",
+    "seed-appointments": "ts-node ./src/database/seeders/appointmentSeeder.ts",
     "build": "tsc",
-    "start":"node ./dist/server.js"
+    "start": "node ./dist/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -24,6 +28,7 @@
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
