--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
+  "jest": {
+    "modulePathIgnorePatterns": [
+      "src"
+    ]
+  },
   "name": "estudio_tatoo",
   "version": "1.0.0",
   "description": "",
   "main": "server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "tsc && jest",
     "dev": "nodemon ./src/server.ts",
     "run-migrations": " typeorm-ts-node-commonjs migration:run -d ./src/database/db.ts",
     "revert-migrations": "typeorm-ts-node-commonjs migration:revert -d ./src/database/db.ts",
@@ -31,9 +36,13 @@
     "@faker-js/faker": "^8.4.1",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.20",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.0",
+    "supertest": "^6.3.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
